--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,6 +1,5 @@
 #base image
-FROM python:3.9-slim
-
+FROM python:3.11-slim
 #copy all the file
 COPY . /app/
 
@@ -14,4 +13,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 8000 
 
 #run command
-CMD ["uvicorn", "Backend.api:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
